--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
   <br>
   <h1>Notícias em alta</h1>
   <br>
-  <h2>fdp é pega roubando sua tia </h2>
-  <h5> loren ipsun n sei a porra do texto ent vai qualquer merdarsrsrsrsr</h5>
+  <h2>aaaaaaaaaaaaaaa titulo</h2>
+  <h5> loren ipsun n sei esse texto ent vai qualquer coisasrsrsrsr</h5>
 </main>
 
 <section class="conteudo container-fluid"></section>
@@ -161,7 +161,7 @@
   <br>
   <br>
 
-  <h3>Principais notícias</h3>
+  <h5>Principais notícias</h5>
 
   <hr>
 
@@ -175,35 +175,37 @@
   <div class="row">
     <div class="column">
       <div class="content">
-        <img src="img/jornal1.jpg" alt="Mountains" style="width:100%">
-        <h3>My Work</h3>
-        <p>Lorem ipsum..</p>
+        <img src="img/cultura1.png" alt="Mountains" style="width:100%">
+        <h5>Os desafios da indústria da moda para diminuir o impacto ambiental</h5>
+        <p>Indústria de alto impacto ambiental busca maneiras de se tornar mais sustentável e minimizar danos</p>
       </div>
     </div>
 
     <div class="column">
       <div class="content">
-        <img src="img/jornal2.jpg" alt="Mountains" style="width:100%">
-        <h3>My Work</h3>
-        <p>Lorem ipsum..</p>
-      </div>
-    </div>
-
-
-    <div class="column">
-      <div class="content">
-        <img src="img/jornal3.jpg" alt="Mountains" style="width:100%">
-        <h3>My Work</h3>
-        <p>Lorem ipsum..</p>
+        <img src="img/cultura2.png" alt="Mountains" style="width:100%">
+        <h5>Fazer 'turismo sustentável' exige respeito ao meio ambiente e à cultura local</h5>
+        <p>Medidas simples podem melhorar a experiência do viajante enquanto beneficiam as comunidades visitadas e o meio ambiente.
+        </p>
       </div>
     </div>
 
 
     <div class="column">
       <div class="content">
-        <img src="img/jornal4.jpg" alt="Mountains" style="width:100%">
-        <h3>My Work</h3>
-        <p>Lorem ipsum..</p>
+        <img src="img/cultura3.png" alt="Mountains" style="width:100%">
+        <h5>Iniciativas pernambucanas fomentam cultura sustentável na sociedade
+        </h5>
+        <p>Esta matéria traz depoimentos de profissionais e empresas de Pernambuco que demonstram como escapar da lógica do desenvolvimento econômico a...</p>
+      </div>
+    </div>
+
+
+    <div class="column">
+      <div class="content">
+        <img src="img/cultura4.png" alt="Mountains" style="width:100%">
+        <h5>Como a sustentabilidade afeta nossas vidas e qual origem do conceito?</h5>
+        <p>Manter hábitos sustentáveis em todas as esferas da sociedade deveria ser preocupação pessoal, governamental e empresarial. </p>
       </div>
     </div>
 
@@ -224,15 +226,15 @@
       <div class="column">
         <div class="content">
           <img src="img/jornal1.jpg" alt="Mountains" style="width:100%">
-          <h3>My Work</h3>
-          <p>Lorem ipsum..</p>
+          <h5>Os desafios da indústria da moda para diminuir o impacto ambiental</h5>
+          <p>Indústria de alto impacto ambiental busca maneiras de se tornar mais sustentável e minimizar danos</p>
         </div>
       </div>
   
       <div class="column">
         <div class="content">
           <img src="img/jornal2.jpg" alt="Mountains" style="width:100%">
-          <h3>My Work</h3>
+          <h5>My Work</h5>
           <p>Lorem ipsum..</p>
         </div>
       </div>
@@ -241,8 +243,8 @@
       <div class="column">
         <div class="content">
           <img src="img/jornal3.jpg" alt="Mountains" style="width:100%">
-          <h3>My Work</h3>
-          <p>Lorem ipsum..</p>
+          <h5>Iniciativas pernambucanas fomentam cultura sustentável na sociedade</h5>
+          <p></p>
         </div>
       </div>
   
@@ -250,7 +252,7 @@
       <div class="column">
         <div class="content">
           <img src="img/jornal4.jpg" alt="Mountains" style="width:100%">
-          <h3>My Work</h3>
+          <h5>My Work</h5>
           <p>Lorem ipsum..</p>
         </div>
       </div>
@@ -274,7 +276,7 @@
         <div class="column">
           <div class="content">
             <img src="img/jornal1.jpg" alt="Mountains" style="width:100%">
-            <h3>My Work</h3>
+            <h5>My Work</h5>
             <p>Lorem ipsum..</p>
           </div>
         </div>
@@ -282,7 +284,7 @@
         <div class="column">
           <div class="content">
             <img src="img/jornal2.jpg" alt="Mountains" style="width:100%">
-            <h3>My Work</h3>
+            <h5>My Work</h5>
             <p>Lorem ipsum..</p>
           </div>
         </div>
@@ -291,7 +293,7 @@
         <div class="column">
           <div class="content">
             <img src="img/jornal3.jpg" alt="Mountains" style="width:100%">
-            <h3>My Work</h3>
+            <h5>My Work</h5>
             <p>Lorem ipsum..</p>
           </div>
         </div>
@@ -300,7 +302,7 @@
         <div class="column">
           <div class="content">
             <img src="img/jornal4.jpg" alt="Mountains" style="width:100%">
-            <h3>My Work</h3>
+            <h5>My Work</h5>
             <p>Lorem ipsum..</p>
           </div>
         </div>
@@ -323,7 +325,7 @@
           <div class="column">
             <div class="content">
               <img src="img/jornal1.jpg" alt="Mountains" style="width:100%">
-              <h3>My Work</h3>
+              <h5>My Work</h5>
               <p>Lorem ipsum..</p>
             </div>
           </div>
@@ -331,7 +333,7 @@
           <div class="column">
             <div class="content">
               <img src="img/jornal2.jpg" alt="Mountains" style="width:100%">
-              <h3>My Work</h3>
+              <h5>My Work</h5>
               <p>Lorem ipsum..</p>
             </div>
           </div>
@@ -340,7 +342,7 @@
           <div class="column">
             <div class="content">
               <img src="img/jornal3.jpg" alt="Mountains" style="width:100%">
-              <h3>My Work</h3>
+              <h5>My Work</h5>
               <p>Lorem ipsum..</p>
             </div>
           </div>
@@ -349,7 +351,7 @@
           <div class="column">
             <div class="content">
               <img src="img/jornal4.jpg" alt="Mountains" style="width:100%">
-              <h3>My Work</h3>
+              <h5>My Work</h5>
               <p>Lorem ipsum..</p>
             </div>
           </div>
@@ -372,7 +374,7 @@
             <div class="column">
               <div class="content">
                 <img src="img/jornal1.jpg" alt="Mountains" style="width:100%">
-                <h3>My Work</h3>
+                <h5>My Work</h5>
                 <p>Lorem ipsum..</p>
               </div>
             </div>
@@ -380,7 +382,7 @@
             <div class="column">
               <div class="content">
                 <img src="img/jornal2.jpg" alt="Mountains" style="width:100%">
-                <h3>My Work</h3>
+                <h5>My Work</h5>
                 <p>Lorem ipsum..</p>
               </div>
             </div>
@@ -389,7 +391,7 @@
             <div class="column">
               <div class="content">
                 <img src="img/jornal3.jpg" alt="Mountains" style="width:100%">
-                <h3>My Work</h3>
+                <h5>My Work</h5>
                 <p>Lorem ipsum..</p>
               </div>
             </div>
@@ -398,7 +400,7 @@
             <div class="column">
               <div class="content">
                 <img src="img/jornal4.jpg" alt="Mountains" style="width:100%">
-                <h3>My Work</h3>
+                <h5>My Work</h5>
                 <p>Lorem ipsum..</p>
               </div>
             </div>
