--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 
 <main class="container">
   <br>
-  <h1>Notícias em alta</h1>
+  <h1 class="text-break">Notícias em alta</h1>
   <br>
-  <h2>aaaaaaaaaaaaaaa titulo</h2>
-  <h5> loren ipsun n sei esse texto ent vai qualquer coisasrsrsrsr</h5>
+  <h2 class="text-break">aaaaaaaaaaaaaaa titulo</h2>
+  <h5 class="text-break"> loren ipsun n sei esse texto ent vai qualquer coisasrsrsrsr</h5>
 </main>
 
 <section class="conteudo container-fluid"></section>
@@ -161,7 +161,7 @@
   <br>
   <br>
 
-  <h5>Principais notícias</h5>
+  <h5 class="text-break">Principais notícias</h5>
 
   <hr>
 
@@ -170,22 +170,22 @@
  
 
   <h2>Cultura</h2>
-  <p>Fique por dentro das principais notícias sobre cultura.</p>
+  <p class="text-break">Fique por dentro das principais notícias sobre cultura.</p>
   
   <div class="row">
     <div class="column">
       <div class="content">
         <img src="img/cultura1.png" alt="Mountains" style="width:100%">
-        <h5>Os desafios da indústria da moda para diminuir o impacto ambiental</h5>
-        <p>Indústria de alto impacto ambiental busca maneiras de se tornar mais sustentável e minimizar danos</p>
+        <h5 class="text-break">Os desafios da indústria da moda para diminuir o impacto ambiental</h5>
+        <p class="text-break">Indústria de alto impacto ambiental busca maneiras de se tornar mais sustentável e minimizar danos</p>
       </div>
     </div>
 
     <div class="column">
       <div class="content">
         <img src="img/cultura2.png" alt="Mountains" style="width:100%">
-        <h5>Fazer 'turismo sustentável' exige respeito ao meio ambiente e à cultura local</h5>
-        <p>Medidas simples podem melhorar a experiência do viajante enquanto beneficiam as comunidades visitadas e o meio ambiente.
+        <h5 class="text-break">Fazer 'turismo sustentável' exige respeito ao meio ambiente e à cultura local</h5>
+        <p class="text-break">Medidas simples podem melhorar a experiência do viajante enquanto beneficiam as comunidades visitadas e o meio ambiente.
         </p>
       </div>
     </div>
