--- a/ajude.html
+++ b/ajude.html
@@ -56,64 +56,9 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
 
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Categoria
-              </a>
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Cultura.html">Cultura</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="economia.html">Economia</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="esportes.html">Esportes</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="novidades.html">Novidades</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="politica.html">Política</a></li>
-
-              </ul>
-              <li><hr class="dropdown-divider"></li>
-              
-            </li>
-
-
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="qmsomos.html">Quem somos</a>
             </li>
-
-
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Idioma
-              </a>
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Português(BR)</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Inglês</a></li>
-
-              </ul>
-
-            </li>
-
-
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Tema
-              </a>
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="indexe.html">Claro</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="index.html">Escuro</a></li>
-              </ul>
-
-            </li>
-
 
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="tempo.html">Tempo</a>
@@ -138,8 +83,118 @@
     </nav>
 
 
+    <main class="container">
+
+      <br>
+
+      <h1>Ajude</h1>
+      <hr>
+      <br>
+      <h3>A gentiliza é um ato de amor ao próximo e ao Criador. Uma linda estrada de doação e carinho. Não é difícil ser gentil, é uma entrega constante e a essência para receber bons frutos, além desse retorno, ela gera humildade e gratidão. Quem pratica esse belo ato, colhe sorrisos, respeito, amor e infinitas lembranças de gestos inesperados de solidariedade. Gentileza sua linda seja sempre bem-vinda!Para isso, aqui você pode contribuir para algumas causas. </h3>
+        <br>
+
+      <hr>
+        
+      <h3>Formas de pagamento:</h3>
+
+      <div class="pagamentos">
+        <img src="images/icons/pix.png" alt=""> <img src="images/icons/Boleto.png" alt=""> <img src="images/icons/visa.png" alt=""> <img src="images/icons/mastercard.png" alt=""> <img src="images/icons/bancodobrasil.png" alt=""> <img src="images/icons/elo.png" alt=""> <img src="images/icons/paypal.png" alt=""> 
+      </div>
+
+      <h3>Urgente!</h3>
+
+      <br>
+
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="images/urgente.png" class="imagemurgente img-fluid rounded-start" alt="urgente.png">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Falta de oxigênio</h5>
+              <p class="card-text">Crise do oxigênio no Amazonas completa um ano com impunidade e incerteza causada pela ômicron.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <br>
+      <br>
+
+      <h3>Veja mais!</h3>
+
+      <br>
+
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="images/vejamais1.png" class="imagemurgente2 img-fluid rounded-start" alt="urgente.png">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Derramamento de terra</h5>
+              <p class="card-text">Após deslizamento de terra, rodovia é totalmente fechada no Paraná
+                De acordo com avaliação de técnicos do DNIT, ainda persiste o risco de desmoronamento de parte da encosta.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="images/vejamais2.png" class="imagemurgente3 img-fluid rounded-start" alt="urgente.png">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Agua cobre uma cidade inteira - Alagamento!</h5>
+              <p class="card-text">"Ninguém sabe onde está sua casa": um novo mar cobre o Paquistão
+                O governo regional diz que mais de 100.000 pessoas foram deslocadas por este novo mar, criado pelas chuvas recordes e pelo transbordamento do rio Indo</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+    </main>
+
+
       </body>
         </head>
+
+            <!-- FOOTER - RODAPÉ -->
+<br>
+<footer class="container-fluid ">
+  <div class="container flexFooter">
+
+      <div>
+    <p>Copyright &#169  2022 LNews</p>
+      </div>
+
+
+
+  <div id="social">
+
+    <a href="#"><img src="img/instagram.png" alt="instagram"></a>
+
+    <a href="#"><img src="img/facebook.png" alt="facebook"></a>
+
+    <a href="#"><img src="img/linkedin.png" alt="linkedin"></a>
+
+    <a href="#"><img src="img/twitter.png" alt="twitter"></a>
+
+    <a href="#"><img src="img/youtube.png" alt="youtube"></a>
+
+  </div>
+
+  
+
+
+</footer>
+
 
             <!-- JavaScript Bundle with Popper -->
     <script
