--- a/economia.html
+++ b/economia.html
@@ -53,68 +53,13 @@
   
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-  
-              <li class="nav-item dropdown">
-  
-                <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Categoria
-                </a>
-  
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Cultura.html">Cultura</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="economia.html">Economia</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="esportes.html">Esportes</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="novidades.html">Novidades</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="politica.html">Política</a></li>
-  
-                </ul>
-                <li><hr class="dropdown-divider"></li>
-                
-              </li>
-  
+              </li>  
   
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="qmsomos.html">Quem somos</a>
               </li>
   
-  
-              <li class="nav-item dropdown">
-  
-                <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Idioma
-                </a>
-  
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Português(BR)</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Inglês</a></li>
-  
-                </ul>
-  
-              </li>
-  
-  
-              <li class="nav-item dropdown">
-  
-                <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Tema
-                </a>
-  
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="indexe.html">Claro</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="index.html">Escuro</a></li>
-                </ul>
-  
-              </li>
-  
-  
-              <li class="nav-item">
+                <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="tempo.html">Tempo</a>
               </li>
   
@@ -153,7 +98,7 @@
       <br>
       <h2 class="text-break">Marisa vai levar energia limpa a todas as lojas de rua em pacto com Raízen.</h2>
       <br>
-      <h3>Objetivo é levar energia renovável a todas as lojas de rua até o final de 2023.</h3>
+      <h3 class="text-break">Objetivo é levar energia renovável a todas as lojas de rua até o final de 2023.</h3>
     
       <br>
 
@@ -161,7 +106,7 @@
       <br>
       <br>
 
-      <p class="h5">
+      <p class="h5 text-break">
         M de Mais energia renovável! É esse o caminho que estamos trilhando ao lado da nossa nova parceira, a Raízen, referência global em bioenergia.
         <br>
         <br>
