--- a/registro.html
+++ b/registro.html
@@ -84,7 +84,7 @@
 							Já possui cadastro?
 						</span>
 
-						<a href="index.html" class="txt2 bo1">
+						<a href="login.html" class="txt2 bo1">
 							Clique aqui!
 						</a>
 					</div>
