--- a/tempo.html
+++ b/tempo.html
@@ -56,64 +56,9 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
 
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Categoria
-              </a>
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Cultura.html">Cultura</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="economia.html">Economia</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="esportes.html">Esportes</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="novidades.html">Novidades</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="politica.html">Política</a></li>
-
-              </ul>
-              <li><hr class="dropdown-divider"></li>
-              
-            </li>
-
-
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="qmsomos.html">Quem somos</a>
             </li>
-
-
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Idioma
-              </a>
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Português(BR)</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Inglês</a></li>
-
-              </ul>
-
-            </li>
-
-
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Tema
-              </a>
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="indexe.html">Claro</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="index.html">Escuro</a></li>
-              </ul>
-
-            </li>
-
 
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="tempo.html">Tempo</a>
@@ -138,8 +83,63 @@
     </nav>
 
 
+    <main class="container">
+      <br>
+      <h1>Tempo</h1>
+      <hr class="line" style="color: white;">
+      <br>
+  
+      <div class="tempo">
+
+        <div class="tempoum">
+            <p>Céu nublado</p>
+            <img src="img/chuvinhakk.png" alt="">
+        </div>
+
+        <div class="tempodois">
+            <img src="images/climatempo.png" alt="">
+        </div>
+
+    </div>
+
+
+  </main>
+
+
+
       </body>
         </head>
+
+            <!-- FOOTER - RODAPÉ -->
+<br>
+<footer class="container-fluid ">
+  <div class="container flexFooter">
+
+      <div>
+    <p>Copyright &#169  2022 LNews</p>
+      </div>
+
+
+
+  <div id="social">
+
+    <a href="#"><img src="img/instagram.png" alt="instagram"></a>
+
+    <a href="#"><img src="img/facebook.png" alt="facebook"></a>
+
+    <a href="#"><img src="img/linkedin.png" alt="linkedin"></a>
+
+    <a href="#"><img src="img/twitter.png" alt="twitter"></a>
+
+    <a href="#"><img src="img/youtube.png" alt="youtube"></a>
+
+  </div>
+
+  
+
+
+</footer>
+
 
             <!-- JavaScript Bundle with Popper -->
     <script
