--- a/Cultura.html
+++ b/Cultura.html
@@ -56,64 +56,9 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
 
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Categoria
-              </a>
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Cultura.html">Cultura</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="economia.html">Economia</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="esportes.html">Esportes</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="novidades.html">Novidades</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="politica.html">Política</a></li>
-
-              </ul>
-              <li><hr class="dropdown-divider"></li>
-              
-            </li>
-
-
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="qmsomos.html">Quem somos</a>
             </li>
-
-
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Idioma
-              </a>
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Português(BR)</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Inglês</a></li>
-
-              </ul>
-
-            </li>
-
-
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Tema
-              </a>
-
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="indexe.html">Claro</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="index.html">Escuro</a></li>
-              </ul>
-
-            </li>
-
 
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="tempo.html">Tempo</a>
@@ -146,6 +91,15 @@
       <br>
 
       <img src="img/cultura1.png" class="img-fluid" alt="...">
+
+      <br>
+      <br>
+
+      <h4 class="text-break">lorem ipisum aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa 
+        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        cucuadsnhdkjasdhkaswhdowuhdiowuqhdishadjkiashdiwquhduiwhdewuhdwhduiwqhdwiuqhdiqahduikwqau
+        cuajdoiusahyduashusahushaushauhsuhadjhksajdiasdjksadjksadjksajdsakljdsalkjdlsuucuucucuccuc
+        ucucuccucucucucu</h4>
     
     </main>
   
