--- a/login.html
+++ b/login.html
@@ -23,17 +23,27 @@
 <!--===============================================================================================-->	
 	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
 <!--===============================================================================================-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
 </head>
 <body>
-	
-	<div class="limiter">
-		<div class="container-login100" style="background-color: black;">
-			<div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
-				<form class="login100-form validate-form flex-sb flex-w">
 
+	<div class="limiter">
+		
+		<div class="sair">
+	    </div>
+
+		<div class="container-login100">
+			<div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
+
+				<form class="login100-form validate-form flex-sb flex-w">
+					
+					
 					<span class="login100-form-title p-b-53">
 						<img src="images/icons/logoJornal.png" alt="">
 					</span>
@@ -43,7 +53,7 @@
 							Usuário
 						</span>
 					</div>
-					<div class="wrap-input100 validate-input" data-validate = "Username is required">
+					<div class="wrap-input100 validate-input" data-validate = "Nome necessário">
 						<input class="input100" type="text" name="username" >
 						<span class="focus-input100"></span>
 					</div>
@@ -57,7 +67,7 @@
 							Esqueceu sua senha?
 						</a>
 					</div>
-					<div class="wrap-input100 validate-input" data-validate = "Password is required">
+					<div class="wrap-input100 validate-input" data-validate = "Senha necessária">
 						<input class="input100" type="password" name="pass" >
 						<span class="focus-input100"></span>
 					</div>
