--- a/ajude.html
+++ b/ajude.html
@@ -105,7 +105,7 @@
 
       <br>
 
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3" style="max-width: 800px;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="images/urgente.png" class="imagemurgente img-fluid rounded-start" alt="urgente.png">
@@ -114,6 +114,7 @@
             <div class="card-body">
               <h5 class="card-title">Falta de oxigênio</h5>
               <p class="card-text">Crise do oxigênio no Amazonas completa um ano com impunidade e incerteza causada pela ômicron.</p>
+              <img src="images/icons/pix.png" style="width: 100px;" alt=""> <img src="images/icons/visa.png" style="width: 100px;" alt=""> <img src="images/icons/bancodobrasil.png" style="width: 50px;" alt="">
             </div>
           </div>
         </div>
@@ -126,7 +127,7 @@
 
       <br>
 
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3" style="max-width: 700px;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="images/vejamais1.png" class="imagemurgente2 img-fluid rounded-start" alt="urgente.png">
@@ -142,7 +143,7 @@
       </div>
 
 
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3" style="max-width: 700px;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="images/vejamais2.png" class="imagemurgente3 img-fluid rounded-start" alt="urgente.png">
